# ws-model-proxy

./: .cursorrules  .dockerignore  .env.docker.defaults  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  biome.json  docker-compose.agent.yml  docker-compose.dev.yml  doctor.config.json  knip.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  portless.json  sitemap.md  turbo.json  vitest.config.ts
.github/: dependabot.yml  labeler.yml
.github/workflows/: build-image.yml  cli-ci.yml  labeler.yml  pr-checks.yml  release-preflight.yml  release.yml
apps/cli/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml  typos.toml
apps/cli/docs/: error-handling.md  releasing.md
apps/cli/scripts/: policy-checks.sh
apps/cli/src/: auth.rs  cli.rs  config.rs  daemon.rs  lib.rs  logging.rs  main.rs  media.rs  paths.rs  probe.rs  protocol.rs  slug.rs  state.rs
apps/cli/src/commands/: completions.rs  config.rs  connect.rs  endpoints.rs  login.rs  logout.rs  mod.rs  reload.rs  token.rs
apps/cli/tap/: README.md
apps/cli/tests/: cli.rs
apps/cli/xtask/: Cargo.toml
apps/cli/xtask/src/: main.rs  sync.rs
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: admin-session-gate.ts  better-auth-admin-gate.test.ts  better-auth-admin-gate.ts  client-ip.test.ts  client-ip.ts  cors-headers.test.ts  cors-headers.ts  device-admin-gate.test.ts  device-admin-gate.ts  email-recipient-limit.test.ts  email-recipient-limit.ts  index.ts  private-ip.test.ts  private-ip.ts  rate-limit.test.ts  rate-limit.ts  security-headers.test.ts  security-headers.ts  seo.test.ts  seo.ts  session-middleware.test.ts  session-middleware.ts  signup-access-gate.test.ts  signup-access-gate.ts  ssr-cache.test.ts  ssr-cache.ts
apps/server/src/media/: admin-gate.ts  admin.test.ts  admin.ts  cleanup.ts  config.ts  csrf-guard.test.ts  csrf-guard.ts  routes.test.ts  routes.ts  service.test.ts  service.ts  signing.test.ts  signing.ts  sniff.test.ts  sniff.ts  store.test.ts  store.ts  ttl.ts
apps/server/src/model-api/: chat-test.test.ts  chat-test.ts  files.test.ts  files.ts  limits.ts  model-list-modalities.test.ts  model-list-modalities.ts  openai-errors.ts  relay-executor.ts  routes.test.ts  routes.ts
apps/server/src/relay/: headers.ts  protocol.test.ts  protocol.ts  registration.ts  session-manager.test.ts  session-manager.ts  websocket.test.ts  websocket.ts
apps/web/: .env.example  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/public/: offline.html
apps/web/src/: index.css  routeTree.gen.ts  router.tsx  server.ts  sw.ts
apps/web/src/components/: bottom-nav.tsx  confirm-delete-dialog.tsx  error-state.tsx  forwarder-dashboard-sections.tsx  header.tsx  inline-retry.tsx  language-switcher-select.tsx  language-switcher.tsx  lazy-qr-code.tsx  main-nav.tsx  mode-toggle-menu.tsx  mode-toggle.tsx  pull-to-refresh.tsx  segmented-control.tsx  session-sync.tsx  theme-color-sync.tsx  two-factor-setup-details.tsx  user-menu-content.tsx  user-menu.tsx
apps/web/src/components/auth/: resend-verification.tsx
apps/web/src/hooks/: use-app-update.ts  use-auth-session.ts  use-change-language.ts  use-chat-scroll-engine.test.ts  use-chat-scroll-engine.ts  use-document-lang.ts  use-haptics.ts  use-media-query.ts  use-mobile-keyboard.ts  use-mount-effect.ts  use-network-status.ts  use-session-bridge.ts  use-session-flag.ts  use-theme-color-meta.ts  use-user-locale-sync.ts
apps/web/src/i18n/: I18nReady.tsx  config.ts  index.ts  labels.ts  locale-routing.test.ts  redirect-to-default.ts  trans-rendering.test.tsx  use-namespace-t.ts  zod.test.ts  zod.ts
apps/web/src/lib/: auth-client.ts  auth-session-state.test.ts  auth-session-state.ts  image-attachments.ts  nav-items.test.ts  nav-items.ts  observability-search.test.ts  observability-search.ts  route-session-access.test.ts  route-session-access.ts  verify-email-search.test.ts  verify-email-search.ts
apps/web/src/routes/: $lang.tsx  __root.tsx  index.tsx
apps/web/src/server/: auth-session.test.ts  auth-session.ts
apps/web/src/stores/: session.ts  ui-preferences.ts
apps/web/src/utils/: friendly-error.ts  orpc.ts  safe-redirect.ts
scripts/: backup.sh  check-auth-session-contract.ts  check-docker-copy.ts  check-load-dotenv-contract.ts  compose.sh  db-push-dangerous-local.sh  dev-docker-down.sh  dev-docker-logs.sh  dev-docker.sh  docker-entrypoint.sh  doctor.ts  find-free-port.sh  generate-secrets.ts  setup.ts  sync-agent-docs.ts  sync-env-example.ts  theme-apply.ts  translate-locale-bundles.ts
scripts/lib/: dev-docker-runtime.sh  env-manifest.ts  env-schema.ts
(+40 files in other folders)
